--- a/clicker.games.html
+++ b/clicker.games.html
@@ -1,91 +1,151 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Clicker Games - Play Free Online Clicker Games</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Clicker Games - Play Free Cookie Clicker Style Games Online</title>
 
-  <!-- Favicon -->
-  <link rel="icon" href="/assets/favicon.png">
+  <link rel="icon" href="/assets/favicon.png" />
+  <link rel="canonical" href="https://cookieclicker-2-game.github.io/clicker.games" />
 
-  <!-- Canonical -->
-  <link rel="canonical" href="https://cookieclicker-2-game.github.io/clicker.games">
+  <!-- TODO: GSC verify meta -->
+  <meta name="google-site-verification" content="gwZJI-NhnCxE4bHlp8M6Vso-5kjf-jGVusAkQ6-KGoE" />
 
-  <!-- Google Search Console verify -->
-  <!-- TODO: GSC verify meta here -->
-  <meta name="google-site-verification" content="gwZJI-NhnCxE4bHlp8M6Vso-5kjf-jGVusAkQ6-KGoE">
-
-  <!-- Meta description -->
-  <meta name="description" content="Discover the best free clicker games like Cookie Clicker 2, Titans Clicker, Sprunki Clicker Master, and more. Tap, upgrade, and idle your way to huge numbers in our clicker game collection.">
-
-  <!-- Meta robots -->
-  <meta name="robots" content="index,follow">
+  <meta
+    name="description"
+    content="Play free clicker games online, including Cookie Clicker 2, Titans Clicker, Duck Duck Clicker, Astro Robot Clicker and more idle tap games."
+  />
+  <meta name="robots" content="index,follow" />
 
   <!-- Open Graph -->
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="Clicker Games - Play Free Online Clicker Games">
-  <meta property="og:description" content="Play Cookie Clicker 2 and other free online clicker games. Build idle empires, tap for upgrades, and watch your numbers explode.">
-  <meta property="og:url" content="https://cookieclicker-2-game.github.io/clicker.games">
-  <meta property="og:image" content="https://cookieclicker-2-game.github.io/assets/thumbs/cookie-clicker-2.png">
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Clicker Games - Play Free Cookie Clicker Style Games Online" />
+  <meta
+    property="og:description"
+    content="Discover the best clicker and idle tap games like Cookie Clicker 2, Titans Clicker, and more. Play instantly in your browser."
+  />
+  <meta property="og:url" content="https://cookieclicker-2-game.github.io/clicker.games" />
+  <meta property="og:image" content="https://cookieclicker-2-game.github.io/assets/thumbs/favicon.png" />
 
-  <!-- Twitter Card -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Clicker Games - Play Free Online Clicker Games">
-  <meta name="twitter:description" content="Play Cookie Clicker 2 and other free online clicker games. Build idle empires, tap for upgrades, and watch your numbers explode.">
-  <meta name="twitter:image" content="https://cookieclicker-2-game.github.io/assets/thumbs/cookie-clicker-2.png">
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Clicker Games - Play Free Cookie Clicker Style Games Online" />
+  <meta
+    name="twitter:description"
+    content="Tap to grow your cookies, coins, or points in a curated list of clicker and idle games."
+  />
+  <meta name="twitter:image" content="https://cookieclicker-2-game.github.io/assets/thumbs/favicon.png" />
 
-  <!-- TODO: GA4 script here -->
+  <!-- GA4 -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-TS4TB1552X"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){ dataLayer.push(arguments); }
+    gtag("js", new Date());
+    gtag("config", "G-TS4TB1552X");
+  </script>
 
-  <!-- Schema: BreadcrumbList (Home > Clicker Games) -->
+  <!-- Schema: ItemList for Clicker games -->
   <script type="application/ld+json">
   {
-    "@context": "https://schema.org",
-    "@type": "BreadcrumbList",
-    "itemListElement": [
+    "@context":"https://schema.org",
+    "@type":"ItemList",
+    "itemListElement":[
       {
-        "@type": "ListItem",
-        "position": 1,
-        "name": "Home",
-        "item": "https://cookieclicker-2-game.github.io/"
+        "@type":"ListItem",
+        "position":1,
+        "url":"https://cookieclicker-2-game.github.io/titans-clicker.html"
       },
       {
-        "@type": "ListItem",
-        "position": 2,
-        "name": "Clicker Games",
-        "item": "https://cookieclicker-2-game.github.io/clicker.games"
+        "@type":"ListItem",
+        "position":2,
+        "url":"https://cookieclicker-2-game.github.io/duck-duck-clicker.html"
+      },
+      {
+        "@type":"ListItem",
+        "position":3,
+        "url":"https://cookieclicker-2-game.github.io/sprunki-clicker-master.html"
+      },
+      {
+        "@type":"ListItem",
+        "position":4,
+        "url":"https://cookieclicker-2-game.github.io/bloodmoney.html"
+      },
+      {
+        "@type":"ListItem",
+        "position":5,
+        "url":"https://cookieclicker-2-game.github.io/dino-world-clicker.html"
+      },
+      {
+        "@type":"ListItem",
+        "position":6,
+        "url":"https://cookieclicker-2-game.github.io/paws-antistress-clicker.html"
+      },
+      {
+        "@type":"ListItem",
+        "position":7,
+        "url":"https://cookieclicker-2-game.github.io/cookie-clicker.html"
+      },
+      {
+        "@type":"ListItem",
+        "position":8,
+        "url":"https://cookieclicker-2-game.github.io/the-new-steal-brainrot-super-clicker.html"
+      },
+      {
+        "@type":"ListItem",
+        "position":9,
+        "url":"https://cookieclicker-2-game.github.io/astro-robot-clicker.html"
+      },
+      {
+        "@type":"ListItem",
+        "position":10,
+        "url":"https://cookieclicker-2-game.github.io/chill-girl-clicker.html"
+      },
+      {
+        "@type":"ListItem",
+        "position":11,
+        "url":"https://cookieclicker-2-game.github.io/italian-brainrot-clicker-2.html"
+      },
+      {
+        "@type":"ListItem",
+        "position":12,
+        "url":"https://cookieclicker-2-game.github.io/cookie-clicker-2.html"
       }
     ]
   }
   </script>
 
-  <!-- Schema: ItemList (danh sách clicker games) -->
+  <!-- Schema: BreadcrumbList: Home > Clicker Games -->
   <script type="application/ld+json">
   {
-    "@context": "https://schema.org",
-    "@type": "ItemList",
-    "itemListElement": [
-      { "@type": "ListItem", "position": 1, "url": "https://cookieclicker-2-game.github.io/cookie-clicker-2.html" },
-      { "@type": "ListItem", "position": 2, "url": "https://cookieclicker-2-game.github.io/titans-clicker.html" },
-      { "@type": "ListItem", "position": 3, "url": "https://cookieclicker-2-game.github.io/duck-duck-clicker.html" },
-      { "@type": "ListItem", "position": 4, "url": "https://cookieclicker-2-game.github.io/sprunki-clicker-master.html" },
-      { "@type": "ListItem", "position": 5, "url": "https://cookieclicker-2-game.github.io/bloodmoney.html" },
-      { "@type": "ListItem", "position": 6, "url": "https://cookieclicker-2-game.github.io/dino-world-clicker.html" },
-      { "@type": "ListItem", "position": 7, "url": "https://cookieclicker-2-game.github.io/paws-antistress-clicker.html" },
-      { "@type": "ListItem", "position": 8, "url": "https://cookieclicker-2-game.github.io/cookie-clicker.html" },
-      { "@type": "ListItem", "position": 9, "url": "https://cookieclicker-2-game.github.io/the-new-steal-brainrot-super-clicker.html" },
-      { "@type": "ListItem", "position": 10, "url": "https://cookieclicker-2-game.github.io/astro-robot-clicker.html" },
-      { "@type": "ListItem", "position": 11, "url": "https://cookieclicker-2-game.github.io/chill-girl-clicker.html" },
-      { "@type": "ListItem", "position": 12, "url": "https://cookieclicker-2-game.github.io/italian-brainrot-clicker-2.html" }
+    "@context":"https://schema.org",
+    "@type":"BreadcrumbList",
+    "itemListElement":[
+      {
+        "@type":"ListItem",
+        "position":1,
+        "name":"Home",
+        "item":"https://cookieclicker-2-game.github.io/"
+      },
+      {
+        "@type":"ListItem",
+        "position":2,
+        "name":"Clicker Games",
+        "item":"https://cookieclicker-2-game.github.io/clicker.games"
+      }
     ]
   }
   </script>
 
-  <link rel="stylesheet" href="/assets/css/style.css">
+  <link rel="stylesheet" href="/assets/css/style.css" />
 </head>
-<body data-slug="clicker-games" data-primary-category="clicker">
-  <!-- Header chung -->
+
+<body data-page-type="category" data-category="clicker">
+
+  <!-- HEADER -->
   <header class="site-header">
     <div class="site-header-inner">
+
       <a href="/" class="site-logo">
         <div class="site-logo-icon">🍪</div>
         <span>CookieGames</span>
@@ -107,80 +167,66 @@
       </nav>
 
       <div class="header-right">
-        <div class="search-wrapper" id="searchWrapper">
+        <div id="searchWrapper" class="search-wrapper">
           <span class="search-icon">🔍</span>
           <input
-            type="search"
             id="searchInput"
+            type="search"
             class="search-input"
             placeholder="Tìm game..."
             autocomplete="off"
-          >
-          <div id="searchResults" class="search-results" aria-label="Search results"></div>
+          />
+          <div id="searchResults" class="search-results"></div>
         </div>
 
         <button id="themeToggle" class="theme-toggle" type="button">
-          <span class="icon">🌙</span>
-          <span>Theme</span>
+          <span class="icon">🌙</span><span>Theme</span>
         </button>
       </div>
+
     </div>
   </header>
 
+  <!-- MAIN -->
   <main class="page-container">
     <div class="layout">
+
+      <!-- MAIN CONTENT -->
       <section class="main-content">
-        <nav id="breadcrumb" class="breadcrumb" aria-label="Breadcrumb">
-          <!-- JS sẽ render: Home > Clicker Games -->
-        </nav>
 
-        <article class="card">
-          <header class="game-header">
-            <h1 class="game-title">Clicker Games</h1>
-            <div class="game-meta">
-              <span>🍪 Collection of free clicker games</span>
-              <span>Updated regularly</span>
-            </div>
-          </header>
+        <nav id="breadcrumb" class="breadcrumb" aria-label="Breadcrumb"></nav>
 
-          <section style="margin-top: 12px;">
-            <p style="font-size:14px; line-height:1.6; opacity:0.95;">
-              Explore the best free online clicker games, from <strong>Cookie Clicker 2</strong> to
-              brainrot-style tap adventures. Click to earn resources, invest in upgrades, and let
-              your idle factories work while you relax.
-            </p>
-          </section>
+        <header class="card">
+          <h1 class="page-title">Clicker Games</h1>
+          <p class="page-intro">
+            Love Cookie Clicker style gameplay? Here you’ll find tap-to-grow clicker games where you can build
+            huge numbers with simple clicks, upgrades, and idle progress running in the background.
+          </p>
+        </header>
 
-          <section style="margin-top: 14px;">
-            <h2 class="section-title">All clicker games</h2>
-            <div id="categoryGrid" class="game-grid">
-              <!-- JS: getGamesByCategory("clicker") với phân trang -->
-            </div>
+        <section class="card" style="margin-top:14px;">
+          <h2 class="section-title">All clicker games</h2>
+          <div id="categoryGrid" class="game-grid"></div>
+          <div id="pagination" class="pagination"></div>
+        </section>
 
-            <div id="pagination" class="pagination" aria-label="Pagination">
-              <!-- JS render Prev / 1 2 3 / Next -->
-            </div>
-          </section>
-        </article>
       </section>
 
-      <!-- Sidebar: hot games tái sử dụng -->
+      <!-- SIDEBAR -->
       <aside class="sidebar">
         <section class="card">
           <h2 class="sidebar-title">Game hot</h2>
-          <div id="hotGames" class="hot-list">
-            <!-- JS: getHotGames(8) -->
-          </div>
+          <div id="hotGames" class="hot-list"></div>
         </section>
       </aside>
+
     </div>
   </main>
 
+  <!-- FOOTER -->
   <footer class="site-footer">
     <div class="site-footer-inner">
-      <div>
-        © <span data-year></span> Cookie Clicker 2 Game Hub
-      </div>
+      <div>© <span data-year></span> Cookie Clicker 2 Game Hub</div>
       <nav class="footer-links">
         <a href="/about.html">About Us</a>
         <a href="/contact.html">Contact Us</a>
@@ -191,8 +237,18 @@
     </div>
   </footer>
 
+  <!-- JS: update canonical with ?page= -->
+  <script>
+    (function () {
+      var link = document.querySelector('link[rel="canonical"]');
+      if (!link) return;
+      var url = window.location.href.split("#")[0];
+      link.href = url;
+    })();
+  </script>
+
   <script src="/assets/js/games-data.js" defer></script>
   <script src="/assets/js/site.js" defer></script>
+
 </body>
 </html>
-
