--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <meta property="og:title" content="Cookie Clicker 2 - Play Free Online Clicker Game" />
   <meta
     property="og:description"
-    content="Enjoy Cookie Clicker 2 and other clicker, idle, and IO games in one simple, fast browser hub."
+    content="Enjoy Cookie Clicker 2 and other clicker, idle, IO, and hot arcade games in one simple, fast browser hub."
   />
   <meta property="og:url" content="https://cookieclicker-2-game.github.io/" />
   <meta property="og:image" content="https://cookieclicker-2-game.github.io/assets/thumbs/cookie-clicker-2.png" />
@@ -49,7 +49,7 @@
     gtag("config", "G-TS4TB1552X");
   </script>
 
-  <!-- Schema.org: WebSite + SearchAction cho toàn site -->
+  <!-- Schema.org: WebSite + SearchAction -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -134,12 +134,11 @@
       <!-- MAIN COLUMN -->
       <section class="main-content">
 
-        <!-- Breadcrumb: home có thể chỉ hiển thị "Home" (JS sẽ xử lý nếu cần) -->
+        <!-- Breadcrumb (home chỉ cần Home, JS sẽ xử lý) -->
         <nav id="breadcrumb" class="breadcrumb" aria-label="Breadcrumb"></nav>
 
         <!-- FEATURED GAME: COOKIE CLICKER 2 -->
         <article class="card">
-
           <header class="game-header">
             <h1 class="game-title">Cookie Clicker 2</h1>
             <div class="game-meta">
@@ -152,9 +151,9 @@
           <!-- GAME FRAME -->
           <div class="game-frame-wrapper">
             <div class="game-frame-inner">
-              <!-- Ghi chú dev (VI): nhúng file embed nội bộ để tránh phụ thuộc host ngoài -->
+              <!-- Nhúng trực tiếp link game đúng -->
               <iframe
-                src="/embed/cookie-clicker-2/index.html"
+                src="https://games-online.io/game/cake-maker/"
                 class="game-frame"
                 title="Cookie Clicker 2"
                 allowfullscreen
@@ -174,24 +173,23 @@
               <span class="icon">⛶</span><span>Phóng to</span>
             </button>
           </div>
-
         </article>
 
-        <!-- BLOCK: CLICKER GAMES / NEW GAMES -->
+        <!-- BLOCK: CLICKER GAMES -->
         <section class="card" style="margin-top:14px;">
           <h2 class="section-title">Clicker games similar to Cookie Clicker 2</h2>
-          <!-- Ghi chú dev (VI): site.js sẽ gọi getClickerGames(12) và render vào đây -->
+          <!-- site.js sẽ gọi getClickerGames(12) và render vào đây -->
           <div id="clickerGrid" class="game-grid"></div>
         </section>
 
-        <!-- OPTIONAL: New games / Recently added -->
+        <!-- BLOCK: NEW GAMES -->
         <section class="card" style="margin-top:14px;">
           <h2 class="section-title">New & popular games</h2>
-          <!-- Ghi chú dev (VI): có thể dùng getNewGames(12) hoặc mix hot + newest -->
+          <!-- site.js sẽ gọi getNewGames(12) và render vào đây -->
           <div id="newGamesGrid" class="game-grid"></div>
         </section>
 
-        <!-- DESCRIPTION / SEO CONTENT CHO TRANG CHỦ -->
+        <!-- DESCRIPTION / SEO CONTENT HOME -->
         <section class="card game-description" style="margin-top:14px;">
 
           <h2>Welcome to Cookie Clicker 2 Game Hub</h2>
@@ -229,15 +227,14 @@
 
       </section>
 
-      <!-- SIDEBAR: HOT GAMES -->
+      <!-- SIDEBAR: HOT GAMES + RECENT -->
       <aside class="sidebar">
         <section class="card">
           <h2 class="sidebar-title">Game hot</h2>
-          <!-- Ghi chú dev (VI): site.js sẽ dùng getHotGames(8) và render list vào đây -->
+          <!-- site.js: getHotGames(8) -->
           <div id="hotGames" class="hot-list"></div>
         </section>
 
-        <!-- OPTIONAL: Recently played (localStorage) -->
         <section class="card" id="recentlyPlayedSection" style="display:none; margin-top:14px;">
           <h2 class="sidebar-title">Tiếp tục chơi</h2>
           <div id="recentlyPlayed" class="hot-list"></div>
