--- a/index.html
+++ b/index.html
@@ -138,42 +138,45 @@
         <nav id="breadcrumb" class="breadcrumb" aria-label="Breadcrumb"></nav>
 
         <!-- FEATURED GAME: COOKIE CLICKER 2 -->
-        <article class="card">
-          <header class="game-header">
-            <h1 class="game-title">Cookie Clicker 2</h1>
-            <div class="game-meta">
-              <span>🎮 25,430 plays</span>
-              <span>⭐ 4.8 / 5.0</span>
-              <span>Category: Clicker</span>
-            </div>
-          </header>
+<article class="card game-section">
 
-          <!-- GAME FRAME -->
-          <div class="game-frame-wrapper">
-            <div class="game-frame-inner">
-              <!-- Nhúng trực tiếp link game đúng -->
-              <iframe
-                src="https://games-online.io/game/cake-maker/"
-                class="game-frame"
-                title="Cookie Clicker 2"
-                allowfullscreen
-              ></iframe>
-            </div>
-          </div>
+  <!-- GAME FRAME: 16:9, max-width, căn giữa -->
+  <div class="game-frame-outer">
+    <div class="game-frame-wrapper">
+      <iframe
+        src="https://games-online.io/game/cake-maker/"
+        class="game-frame"
+        title="Cookie Clicker 2"
+        allowfullscreen
+      ></iframe>
+    </div>
+  </div>
 
-          <!-- ACTION BUTTONS -->
-          <div class="game-actions">
-            <button id="btnComment" class="btn btn-primary" type="button">
-              <span class="icon">💬</span><span>Bình luận</span>
-            </button>
-            <button id="btnShare" class="btn btn-ghost" type="button">
-              <span class="icon">🔗</span><span>Chia sẻ</span>
-            </button>
-            <button id="btnFullscreen" class="btn btn-ghost" type="button">
-              <span class="icon">⛶</span><span>Phóng to</span>
-            </button>
-          </div>
-        </article>
+  <!-- TITLE & META ở dưới khung game -->
+  <header class="game-header">
+    <h1 class="game-title">Cookie Clicker 2</h1>
+    <div class="game-meta">
+      <span>🎮 25,430 plays</span>
+      <span>⭐ 4.8 / 5.0</span>
+      <span>Category: Clicker</span>
+    </div>
+  </header>
+
+  <!-- 3 NÚT DỒN SANG PHẢI -->
+  <div class="game-actions game-actions-right">
+    <button id="btnComment" class="btn btn-primary" type="button">
+      <span class="icon">💬</span><span>Bình luận</span>
+    </button>
+    <button id="btnShare" class="btn btn-ghost" type="button">
+      <span class="icon">🔗</span><span>Chia sẻ</span>
+    </button>
+    <button id="btnFullscreen" class="btn btn-ghost" type="button">
+      <span class="icon">⛶</span><span>Phóng to</span>
+    </button>
+  </div>
+
+</article>
+
 
         <!-- BLOCK: CLICKER GAMES -->
         <section class="card" style="margin-top:14px;">
