--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <!-- FEATURED GAME: COOKIE CLICKER 2 -->
 <article class="card game-section">
 
-  <!-- GAME FRAME: 16:9, max-width, căn giữa -->
+  <!-- GAME FRAME -->
   <div class="game-frame-outer">
     <div class="game-frame-wrapper">
       <iframe
@@ -152,39 +152,34 @@
     </div>
   </div>
 
-  <!-- TITLE & META ở dưới khung game -->
- <header class="game-header-row">
-  <div class="game-header-left">
-    <h1 class="game-title">Cookie Clicker 2</h1>
-    <div class="game-meta">
-      <span>🎮 25,430 plays</span>
-      <span>⭐ 4.8 / 5.0</span>
-      <span>Category: <a class="game-meta-link" href="/clicker.games.html">Clicker</a></span>
+  <!-- TIÊU ĐỀ + META + NÚT: 1 HÀNG DUY NHẤT -->
+  <header class="game-header-row">
+    <div class="game-header-left">
+      <h1 class="game-title">Cookie Clicker 2</h1>
+      <div class="game-meta">
+        <span>🎮 25,430 plays</span>
+        <span>⭐ 4.8 / 5.0</span>
+        <span>
+          Category:
+          <a class="game-meta-link" href="/clicker.games.html">Clicker</a>
+        </span>
+      </div>
     </div>
-  </div>
 
-  <div class="game-actions game-actions-right">
-    <button id="btnComment" class="btn btn-primary"><span class="icon">💬</span> Bình luận</button>
-    <button id="btnShare" class="btn btn-ghost"><span class="icon">🔗</span> Chia sẻ</button>
-    <button id="btnFullscreen" class="btn btn-ghost"><span class="icon">⛶</span> Phóng to</button>
-  </div>
-</header>
-
-  <!-- 3 NÚT DỒN SANG PHẢI -->
-  <div class="game-actions game-actions-right">
-    <button id="btnComment" class="btn btn-primary" type="button">
-      <span class="icon">💬</span><span>Bình luận</span>
-    </button>
-    <button id="btnShare" class="btn btn-ghost" type="button">
-      <span class="icon">🔗</span><span>Chia sẻ</span>
-    </button>
-    <button id="btnFullscreen" class="btn btn-ghost" type="button">
-      <span class="icon">⛶</span><span>Phóng to</span>
-    </button>
-  </div>
+    <div class="game-actions game-actions-right">
+      <button id="btnComment" class="btn btn-primary" type="button">
+        <span class="icon">💬</span><span>Bình luận</span>
+      </button>
+      <button id="btnShare" class="btn btn-ghost" type="button">
+        <span class="icon">🔗</span><span>Chia sẻ</span>
+      </button>
+      <button id="btnFullscreen" class="btn btn-ghost" type="button">
+        <span class="icon">⛶</span><span>Phóng to</span>
+      </button>
+    </div>
+  </header>
 
 </article>
-
 
         <!-- BLOCK: CLICKER GAMES -->
         <section class="card" style="margin-top:14px;">
