--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         <span>⭐ 4.8 / 5.0</span>
         <span>
           Category:
-          <a class="game-meta-link" href="/clicker.games.html">Clicker</a>
+          <a class="game-meta-link" href="/clicker.games">Clicker</a>
         </span>
       </div>
     </div>
