--- a/index.html
+++ b/index.html
@@ -167,15 +167,15 @@
             </div>
 
             <div class="game-actions game-actions-right">
-              <button id="btnComment" class="btn btn-primary" type="button">
-                <span class="icon">💬</span><span>Comments</span>
-              </button>
-              <button id="btnShare" class="btn btn-ghost" type="button">
-                <span class="icon">🔗</span><span>Share</span>
-              </button>
-              <button id="btnFullscreen" class="btn btn-ghost" type="button">
-                <span class="icon">⛶</span><span>Fullscreen</span>
-              </button>
+            <button id="btnComment" class="btn btn-primary" type="button" aria-label="Scroll to comments">
+              <span class="icon">💬</span><span>Comments</span>
+            </button>
+            <button id="btnShare" class="btn btn-ghost" type="button" aria-label="Copy game link">
+              <span class="icon">🔗</span><span>Share</span>
+            </button>
+            <button id="btnFullscreen" class="btn btn-ghost" type="button" aria-label="Toggle fullscreen mode">
+              <span class="icon">⛶</span><span>Fullscreen</span>
+            </button>
             </div>
           </header>
 
