--- a/index.html
+++ b/index.html
@@ -223,6 +223,26 @@
           </p>
 
         </section>
+        <!-- COMMENTS SECTION -->
+        <section id="comment-section" class="card" style="margin-top:14px;">
+          <h2>Comments</h2>
+
+          <script src="https://giscus.app/client.js"
+                  data-repo="cookieclicker-2-game/cookieclicker-2-game.github.io"
+                  data-repo-id="R_kgDOQbQbvA"
+                  data-category="General"
+                  data-category-id="DIC_kwDOQbQbvM4Cy3qb"
+                  data-mapping="pathname"
+                  data-strict="0"
+                  data-reactions-enabled="1"
+                  data-emit-metadata="0"
+                  data-input-position="bottom"
+                  data-theme="preferred_color_scheme"
+                  data-lang="en"
+                  crossorigin="anonymous"
+                  async>
+          </script>
+        </section>
 
       </section>
 
