--- a/index.html
+++ b/index.html
@@ -223,23 +223,16 @@
           </p>
 
         </section>
-<div id="cusdis_thread"></div>
+        <!-- COMMENTS -->
+        <section class="card comments-card" id="comments">
+          <h2 class="section-title">Comments</h2>
 
-<script>
-  document.addEventListener("DOMContentLoaded", () => {
-    const thread = document.getElementById("cusdis_thread");
-    if (!thread) return;
-
-    thread.setAttribute("data-host", "https://cusdis.com");
-    thread.setAttribute("data-app-id", "cb49394b-0e6f-40c8-9817-e09a02385975");
-
-    thread.setAttribute("data-page-id", window.location.pathname);
-    thread.setAttribute("data-page-url", window.location.href);
-    thread.setAttribute("data-page-title", document.title);
-  });
-</script>
-
-<script async defer src="https://cusdis.com/js/cusdis.es.js"></script>
+          <div
+            id="cusdis_thread"
+            data-host="https://cusdis.com"
+            data-app-id="cb49394b-0e6f-40c8-9817-e09a02385975"
+          ></div>
+        </section>
 
       </section>
 
@@ -277,5 +270,9 @@
   <!-- JS -->
   <script src="/assets/js/games-data.js" defer></script>
   <script src="/assets/js/site.js" defer></script>
+    <!-- Cusdis comments -->
+  <script async defer src="https://cusdis.com/js/cusdis.es.js"></script>
+</body>
+</html>
 </body>
 </html>
