--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 
         <!-- BLOCK: RELATED GAMES -->
         <section class="card" style="margin-top:14px;">
-          <h2 class="section-title">Clicker games similar to Cookie Clicker 2</h2>
+          <h2 class="section-title">Recommened For You</h2>
           <!-- site.js will render 10 games: 5 clicker, 3 idle, 2 io -->
           <div id="clickerGrid" class="game-grid"></div>
         </section>
