--- a/index.html
+++ b/index.html
@@ -395,10 +395,11 @@
       autocomplete="email"
     />
 
-    <label class="comment-terms">
-      <input type="checkbox" id="comment-terms" />
-      <span>I’ve read and agree to the terms and conditions.</span>
-    </label>
+<div class="comment-consent">
+  <input type="checkbox" id="commentAgree" />
+  <label for="commentAgree">
+    I’ve read and agree to the terms and conditions.
+  </label>
 
     <!-- dòng báo lỗi nhỏ -->
     <div id="comment-error" style="margin-top:6px;font-size:13px;color:#fecaca;"></div>
