--- a/index.html
+++ b/index.html
@@ -341,6 +341,9 @@
             possible number units, Cookie Clicker 2 offers a long running bakery that can grow for as
             long as the player wants to keep baking.
           </p>
+          <button id="descToggle" class="desc-toggle-btn">
+            Show more ▼
+          </button>
 
         </section>
 
