--- a/index.html
+++ b/index.html
@@ -344,6 +344,7 @@
           <button id="descToggle" class="desc-toggle-btn">
             Show more ▼
           </button>
+          </section>
 
         </section>
 
