--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
         </section>
 
         <!-- DESCRIPTION / SEO CONTENT HOME -->
-        <section class="card game-description" style="margin-top:14px;">
+        <div class="game-description" id="gameDescription">
           <h2>Game Overview</h2>
           <p>
             Cookie Clicker 2 is a relaxed idle clicker where a single tap on a giant cookie starts a
@@ -341,6 +341,7 @@
             possible number units, Cookie Clicker 2 offers a long running bakery that can grow for as
             long as the player wants to keep baking.
           </p>
+          </div>
           <button id="descToggle" class="desc-toggle-btn" type="button">
             <span class="desc-toggle-label">Show more</span>
             <span class="desc-toggle-icon" aria-hidden="true">▼</span>
