--- a/index.html
+++ b/index.html
@@ -189,6 +189,8 @@
         </section>
 
         <!-- DESCRIPTION / SEO CONTENT HOME -->
+                <!-- DESCRIPTION / SEO CONTENT HOME -->
+        <section class="card" style="margin-top:14px;">
         <div class="game-description" id="gameDescription">
           <h2>Game Overview</h2>
           <p>
@@ -340,8 +342,10 @@
             Whether the goal is to relax with a light idle game or to push production into the highest
             possible number units, Cookie Clicker 2 offers a long running bakery that can grow for as
             long as the player wants to keep baking.
-          </p>
+            </p>
           </div>
+
+          <!-- Nút Show more / Show less -->
           <button id="descToggle" class="desc-toggle-btn" type="button">
             <span class="desc-toggle-label">Show more</span>
             <span class="desc-toggle-icon" aria-hidden="true">▼</span>
