--- a/index.html
+++ b/index.html
@@ -189,9 +189,7 @@
         </section>
 
         <!-- DESCRIPTION / SEO CONTENT HOME -->
-                <!-- DESCRIPTION / SEO CONTENT HOME -->
-        <section class="card" style="margin-top:14px;">
-        <div class="game-description" id="gameDescription">
+        <section class="card game-description" style="margin-top:14px;">
           <h2>Game Overview</h2>
           <p>
             Cookie Clicker 2 is a relaxed idle clicker where a single tap on a giant cookie starts a
@@ -342,16 +340,15 @@
             Whether the goal is to relax with a light idle game or to push production into the highest
             possible number units, Cookie Clicker 2 offers a long running bakery that can grow for as
             long as the player wants to keep baking.
-            </p>
+          </p>
           </div>
-
-          <!-- Nút Show more / Show less -->
-          <button id="descToggle" class="desc-toggle-btn" type="button">
-            <span class="desc-toggle-label">Show more</span>
-            <span class="desc-toggle-icon" aria-hidden="true">▼</span>
-          </button>
-        </section>
-
+          
+            <!-- nút luôn nằm ngoài vùng bị cắt, nên lúc nào cũng thấy -->
+            <button id="descToggle" class="desc-toggle-btn">
+              Show more ▼
+            </button>
+          
+          </section>
     <!-- COMMENTS – Cookie Clicker 2 -->
 <section class="comments-section" id="comments" data-game-id="home">
   <div class="comments-header-row">
