--- a/index.html
+++ b/index.html
@@ -404,6 +404,22 @@
     <div id="comment-error" style="margin-top:6px;font-size:13px;color:#fecaca;"></div>
   </form>
 </section>
+        <!-- NEW GAMES – 10 latest -->
+<section class="card" id="newGamesHome" style="margin-top:14px;">
+  <div style="display:flex;align-items:center;justify-content:space-between;margin-bottom:10px;">
+    <h2 class="section-title" style="margin:0;">New Games</h2>
+    <a href="/new.games.html" class="nav-link" style="font-size:13px;">View all</a>
+  </div>
+
+  <!-- JS sẽ render 10 game mới nhất -->
+  <div id="newGamesGrid" class="game-grid"></div>
+
+  <div style="margin-top:12px;text-align:center;">
+    <a href="/all.games.html" class="nav-link" style="font-size:13px;display:inline-flex;">
+      More Games
+    </a>
+  </div>
+</section>
 
       </section>
 
